Package: QDNAseq
================

Version: 0.6.3 [2014-01-25]
o Added support for coercing an QDNAseqReadCounts object to an
  CGHcall::cghRaw object via as(x, "cghRaw") and similar for coercing
  to cghSeg and cghCall.
o Added argument 'filter' to makeCgh() to control whether to drop
  "filtered" bins from the created object or not.
o ROBUSTNESS: Now makeCgh() gives a more informative error message when
  it fails to create a CGHcall::cgh* object.


Version: 0.6.2 [2014-01-21]
o Added argument 'offset=2^-10' to compareToReference().  Previously,
  the default behavior corresponded to offset=1.
o DOCUMENTATION: Added more on help for makeCgh().


Version: 0.6.1 [2014-01-13]
o Now normalizeBins(..., logTransform=FALSE) scales the signals toward
  the target (mean, median or mode) rather than shifts them, which is the
  case when logTransform=TRUE.
o Added support for method="mean" of normalizeBins().
o Now normalizeBins() passes '...' to DNAcopy::smooth.CNA().
o DOCUMENTATION: Added help details on arguments of binReadCounts()
  and normalizeBins().


Version: 0.6.0 [2013-11-22]
o Improved correction for GC content and mappability.
o Revamped caching of intermediate files.


Version: 0.5.8 [2013-11-16]
o Now it is possible to disable verbose message, i.e.
  options('QDNAseq::verbose'=FALSE).


Version: 0.5.7 [2013-11-04]
o ...


Version: 0.5.6 [2013-10-31]
o Added a NEWS file (this file).
o Cleaned up and updated package dependencies.


Version: 0.5.0 [2013-10-18]
o ...


Version: 0.4.2 [2013-08-30]
o ...


Version: 0.4.0 [2013-08-19]
o ...


Version: 0.3.2 [2013-08-05]
o ...


Version: 0.2.0 [2013-06-23]
o ...


Version: 0.1.0 [2013-05-06]
o Added package to repository.

